...
    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
    //MARK: - Configuration Methods
    func configureUI() {
        accessibilityIdentifier = "productListScreenView"
        backgroundColor = .white
        addSubview(selectProductsCategoryImageView)
        addSubview(selectProductsCategoryTextField)
        addSubview(selectProductsCategoryButton)
        
        NSLayoutConstraint.activate([
...
