...
    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
    //MARK: - Configuration Methods
    func configureUI() {
        logInButton.accessibilityIdentifier = "showLogInScreenButton"
        
        addSubview(logoEntranceScreenImageView)
        addSubview(logoEntranceScreenLabel)
        addSubview(signUpOrLogOnLabel)
        addSubview(signUpButton)
        addSubview(logInButton)
...
